[package]
authors = ["lhvy <cookiecoder15@gmail.com>", "arzg <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ludoj"
version = "0.1.0"

[dependencies]
anyhow = "1.0.40"
crossterm = "0.19.0"
rand = "0.8.3"
structopt = "0.3.21"

[dependencies.flume]
default_features = false
version = "0.10.4"
